added font-awesome gem and responsiveness

--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -7,28 +7,28 @@
 </ul>
 <% end%>
 <div class="row" id="form">
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-md-12">
       <%= form_for(:user, url: signup_path) do |f|%>
         <h1 class= "welcome">Sign Up </h1>
         <br>
         <%#= render "users/error"%>
         <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+          <span class="input-group-addon"><i class="fa fa-info"></i></span>
           <%=f.text_field :first_name, placeholder: "First Name", class: "form-control input-lg"%>
         </div>
         <br>
         <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+          <span class="input-group-addon"><i class="fa fa-info"></i></span>
           <%=f.text_field :last_name, placeholder: "Last Name", class: "form-control input-lg"%>
         </div>
         <br>
         <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-          <%=f.text_field :username, placeholder: "Enter username", class: "form-control input-lg"%>
+          <span class="input-group-addon"><i class="fa fa-user"></i></span>
+          <%=f.text_field :username, placeholder: "Username", class: "form-control input-lg"%>
         </div>
         <br>
         <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-lock "></i></span>
+          <span class="input-group-addon"><i class="fa fa-unlock-alt"></i></span>
           <%=f.password_field :password, placeholder: "Password",class:"form-control input-lg"%>
         </div>
         <br>
