--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,13 +19,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
 .meetings {
-    margin-left: 15%;
+    margin-left: 10%;
     margin-top: 5%;
     background-color: #fefebe;
     padding: 40px;
     padding-left: 40px;
-    width: 900px;
+    width: 85%;
 }
 
 .categories {
@@ -72,7 +77,7 @@ ul {
 }
 
 .user-show {
-    margin-left: 20%;
+    margin-left: 10%;
     margin-top: 5%;
     background-color: #ffffff;
     padding: 40px;
@@ -81,7 +86,7 @@ ul {
 }
 
 .edit-profile {
-    margin-left: 20%;
+    margin-left: 10%;
     margin-top: 5%;
     background-color: #bfffea;
     padding: 40px;
@@ -90,7 +95,7 @@ ul {
 }
 
 .user-profile {
-    margin-left: 20%;
+    margin-left: 10%;
     margin-top: 5%;
     background-color: #ffe7e7;
     padding: 40px;
@@ -317,4 +322,10 @@ body {
     border-right: 1px solid #333333;
     border-bottom: 1px solid #333333;
     border-left: 1px solid #CCCCCC;
+}
+
+#form {
+    margin-left: 10%;
+    margin-top: 5%;
+    max-width: 500px;
 }
