--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,18 +3,18 @@
 <% end %>
 
 <div class="row" id="form">
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-md-12">
       <%= form_for(:user, url: handle_login_path) do |f|%>
         <h1 class= "welcome">Welcome Back!</h1>
         <br>
         <%#= render "users/error"%>
         <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+          <span class="input-group-addon"><i class="fa fa-user"></i></span>
           <%=f.text_field :username, placeholder: "Enter username", class: "form-control input-lg"%>
         </div>
         <br>
         <div class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-lock "></i></span>
+          <span class="input-group-addon"><i class="fa fa-unlock-alt"></i></span>
           <%=f.password_field :password, placeholder: "Password",class:"form-control input-lg"%>
         </div>
         <br>
