--- a/app/views/welcome/home.erb
+++ b/app/views/welcome/home.erb
@@ -8,33 +8,33 @@
         <div class="col-lg-12 col-lg-offset-1" style="padding: 30px 0px; margin-bottom: 100px;">
             <h2>🔎 Browse Popular Topics </h2>
             <div class="row flex" style="width: 100%; height: 200px;">
-                <a href="http://localhost:3000/subcategories/21"><div class="col-md-3 box blackent"><span>Black Entrepreneurs</span></div></a>
-                <a href="http://localhost:3000/subcategories/49"><div class="col-md-3 box skincare"><span>Skin Care</span></div></a>
-                <a href="http://localhost:3000/subcategories/52"><div class="col-md-3 box healthyeating"><span>Healthy Eating</span></div></a> 
+                <a href="/subcategories/21"><div class="col-md-3 box blackent"><span>Black Entrepreneurs</span></div></a>
+                <a href="/subcategories/49"><div class="col-md-3 box skincare"><span>Skin Care</span></div></a>
+                <a href="/subcategories/52"><div class="col-md-3 box healthyeating"><span>Healthy Eating</span></div></a> 
             </div>
 
             <div class="row flex" style="width: 100%; height: 200px;">
-                <a href="http://localhost:3000/subcategories/53"><div class="col-md-3 box sushi"><span>Sushi</span></div></a>
-                <a href="http://localhost:3000/subcategories/62"><div class="col-md-3 box boardgames"><span>Board Games</span></div></a>
-                <a href="http://localhost:3000/subcategories/79"><div class="col-md-3 box yoga"><span>Yoga</span></div></a>
+                <a href="/subcategories/53"><div class="col-md-3 box sushi"><span>Sushi</span></div></a>
+                <a href="/subcategories/62"><div class="col-md-3 box boardgames"><span>Board Games</span></div></a>
+                <a href="/subcategories/79"><div class="col-md-3 box yoga"><span>Yoga</span></div></a>
             </div>
 
             <div class="row flex" style="width: 100%; height: 200px;">
-                <a href="http://localhost:3000/subcategories/83"><div class="col-md-3 box homedecorating"><span>Home Decorating</span></div></a>
-                <a href="http://localhost:3000/subcategories/111"><div class="col-md-3 box animalrights"><span>Animal Rights</span></div></a>
-                <a href="http://localhost:3000/subcategories/120"><div class="col-md-3 box womensrights"><span>Womens Rights</span></div></a>
+                <a href="/subcategories/83"><div class="col-md-3 box homedecorating"><span>Home Decorating</span></div></a>
+                <a href="/subcategories/111"><div class="col-md-3 box animalrights"><span>Animal Rights</span></div></a>
+                <a href="/subcategories/120"><div class="col-md-3 box womensrights"><span>Womens Rights</span></div></a>
             </div>
 
             <div class="row flex" style="width: 100%; height: 200px;">
-                <a href="http://localhost:3000/subcategories/136"><div class="col-md-3 box jazz"><span>Jazz</span></div></a>
-                <a href="http://localhost:3000/subcategories/141"><div class="col-md-3 box backpacking"><span>Backpacking</span></div></a>
-                <a href="http://localhost:3000/subcategories/143"><div class="col-md-3 box camping"><span>Camping</span></div></a>
+                <a href="/subcategories/136"><div class="col-md-3 box jazz"><span>Jazz</span></div></a>
+                <a href="/subcategories/141"><div class="col-md-3 box backpacking"><span>Backpacking</span></div></a>
+                <a href="/subcategories/143"><div class="col-md-3 box camping"><span>Camping</span></div></a>
             </div>
 
             <div class="row flex" style="width: 100%; height: 200px;">
-                <a href="http://localhost:3000/subcategories/155"><div class="col-md-3 box homeschooling"><span>Homeschooling</span></div></a>
-                <a href="http://localhost:3000/subcategories/161"><div class="col-md-3 box wfhparents"><span>Work At Home Parents</span></div></a>
-                <a href="http://localhost:3000/subcategories/187"><div class="col-md-3 box anxiety"><span>Anxiety</span></div></a>
+                <a href="/subcategories/155"><div class="col-md-3 box homeschooling"><span>Homeschooling</span></div></a>
+                <a href="/subcategories/161"><div class="col-md-3 box wfhparents"><span>Work At Home Parents</span></div></a>
+                <a href="/subcategories/187"><div class="col-md-3 box anxiety"><span>Anxiety</span></div></a>
             </div>
 
         </div>
